--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,41 +1,33 @@
 @font-face {
-    font-family: 'Poppins Black';
-    src: url('../fonts/Poppins-Black.eot');
-    src: url('../fonts/Poppins-Black.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/Poppins-Black.woff2') format('woff2'),
-        url('../fonts/Poppins-Black.woff') format('woff'),
-        url('../fonts/Poppins-Black.ttf') format('truetype'),
-        url('../fonts/Poppins-Black.svg#Poppins-Black') format('svg');
-    font-weight: 900;
-    font-style: normal;
-    font-display: swap;
+  font-family: 'Noto Serif Vithkuqi';
+  src: url('../fonts/NotoSerifVithkuqi-Regular.eot');
+  src: url('../fonts/NotoSerifVithkuqi-Regular.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/NotoSerifVithkuqi-Regular.woff2') format('woff2'),
+    url('../fonts/NotoSerifVithkuqi-Regular.woff') format('woff'),
+    url('../fonts/NotoSerifVithkuqi-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Poppins Bold';
-    src: url('../fonts/Poppins-Bold.eot');
-    src: url('../fonts/Poppins-Bold.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/Poppins-Bold.woff2') format('woff2'),
-        url('../fonts/Poppins-Bold.woff') format('woff'),
-        url('../fonts/Poppins-Bold.ttf') format('truetype'),
-        url('../fonts/Poppins-Bold.svg#Poppins-Bold') format('svg');
-    font-weight: bold;
-    font-style: normal;
-    font-display: swap;
+  font-family: 'Open Sans';
+  src: url('../fonts/OpenSans-Light.eot');
+  src: url('../fonts/OpenSans-Light.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/OpenSans-Light.woff2') format('woff2'), url('../fonts/OpenSans-Light.woff') format('woff'),
+    url('../fonts/OpenSans-Light.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Poppins';
-    src: url('../fonts/Poppins-ExtraLight.eot');
-    src: url('../fonts/Poppins-ExtraLight.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/Poppins-ExtraLight.woff2') format('woff2'),
-        url('../fonts/Poppins-ExtraLight.woff') format('woff'),
-        url('../fonts/Poppins-ExtraLight.ttf') format('truetype'),
-        url('../fonts/Poppins-ExtraLight.svg#Poppins-ExtraLight') format('svg');
-    font-weight: 200;
-    font-style: normal;
-    font-display: swap;
+  font-family: 'Open Sans SemiBold';
+  src: url('../fonts/OpenSans-SemiBold.eot');
+  src: url('../fonts/OpenSans-SemiBold.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/OpenSans-SemiBold.woff2') format('woff2'), url('../fonts/OpenSans-SemiBold.woff') format('woff'),
+    url('../fonts/OpenSans-SemiBold.ttf') format('truetype');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
 }
-
-
-
