--- a/css/hero.css
+++ b/css/hero.css
@@ -1,27 +1,155 @@
 .hero {
-  /* text-align: center;
-    padding: 18rem 0; */
+  text-align: center;
+}
+.hero-block {
+  padding: 5rem 0;
+}
+.hero-icon,
+.question-icon,
+.contacts-icon {
+  display: block;
+  width: 5rem;
+  height: auto;
+  margin: 0 auto 1rem;
+}
+.hero-block .title {
+  max-width: 50rem;
+  margin: 0 auto 2rem;
+  text-transform: capitalize;
+  line-height: 1;
+}
+.hero-block .text {
+  max-width: 30rem;
+  margin: 0 auto;
 }
 
-.policy {
-  /* padding: 12rem 0;
-    text-align: center; */
+.policy-block {
+  padding: 10rem 0;
+}
+.policy-img {
+  display: none;
+}
+.policy-box .text {
+  margin: 0 auto 1rem;
+  max-width: 35rem;
+}
+.policy-box-mb {
+  margin-bottom: 4rem;
 }
 
-.contacts {
-  /* padding: 12rem 0;
-    text-align: center; */
+.contacts-block {
+  padding: 5rem 0;
+}
+.contacts-img {
+  display: none;
+}
+.contacts-box .sub-title {
+  margin-bottom: 1rem;
+}
+.contacts-box-mb {
+  margin-bottom: 6rem;
+}
+.contacts-box-mb .text--mb {
+  max-width: 35rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+.contacts-span {
+  font-family: var(--title-font);
+  font-size: 1.5rem;
+}
+.contacts-list {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
 }
 
-.question {
-  /* padding: 12rem 0;
-    text-align: center; */
+.question-block {
+  padding: 5rem 0;
 }
-
-.phrase {
-  /* padding: 15rem 0;
-  text-align: center; */
+.question-block .sub-title {
+  margin-bottom: 4rem;
+}
+.question-list {
+  display: flex;
+  flex-direction: column;
+  gap: 4rem;
+  max-width: 60rem;
+  margin: 0 auto;
+}
+.question-sub-title,
+.policy-item-title {
+  font-family: var(--title-font);
+  font-size: 1.6rem;
+  margin-bottom: 1rem;
 }
 
 @media screen and (min-width: 1440px) {
+  .hero {
+    display: grid;
+    grid-template-columns: repeat(2, 66rem);
+    grid-template-rows: repeat(2, 66rem);
+    gap: 4rem;
+    padding: 2rem;
+    text-align: left;
+  }
+
+  .hero-block,
+  .question-block {
+    background-color: var(--second-brand-color);
+    padding: 10rem 5rem 5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .hero-block .title,
+  .hero-block .text {
+    margin-left: 0;
+  }
+  .hero-icon {
+    width: 10rem;
+  }
+  .hero-icon,
+  .question-icon,
+  .contacts-icon {
+    margin: 0;
+  }
+
+  .policy-block,
+  .contacts-block {
+    display: grid;
+    grid-template-columns: repeat(2, 31rem);
+    grid-template-rows: repeat(2, 31rem);
+    gap: 4rem;
+    padding: 0;
+  }
+  .policy-img,
+  .contacts-img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  .policy-box,
+  .contacts-box {
+    background-color: var(--first-brand-color);
+    margin: 0;
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+  }
+  .policy-box .btn {
+    margin-left: 0;
+  }
+
+  .contacts-box {
+    justify-content: space-between;
+  }
+  .contacts-box-mb .btn {
+    margin-left: 0;
+  }
+  .contacts-span {
+    display: block;
+  }
 }
