--- a/css/products.css
+++ b/css/products.css
@@ -46,10 +46,9 @@
   position: relative;
 }
 .product__block {
-  border: 1px solid black;
   padding: 1rem;
-  background-color: var(--main-bg-color);
-  max-width: 30rem;
+  background-color: var(--first-brand-color);
+  width: 30rem;
   margin: 0 auto;
 }
 .product__img-box {
@@ -62,7 +61,6 @@
   height: 25rem;
   background-color: var(--main-bg-color);
   padding: 0.5rem;
-  border: 1px solid red;
 }
 .product__img-box .img {
   width: 100%;
@@ -74,17 +72,13 @@
   padding: 0 1rem;
 }
 .product__name {
-  font-family: var(--title-font);
-  font-size: 1.6rem;
+  font-size: 1.3rem;
   margin-bottom: 1rem;
 }
-.product__desc {
-  margin-bottom: 1rem;
-}
+
 .product__price {
-  font-size: 3rem;
+  font-size: 2rem;
   font-family: var(--title-font);
-  color: var(--second-brand-color);
 }
 .product__btn-block {
   display: flex;
@@ -92,6 +86,8 @@
 }
 .product__btn-block .btn {
   margin: 0;
+  font-size: 1rem;
+  padding: 1rem 1.5rem;
 }
 .product__btn-block .btn--first {
   margin-right: 1rem;
@@ -113,5 +109,13 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    width: 20rem;
+  }
+  .product__img-box {
+    width: 15rem;
+    height: 15rem;
+  }
+  .products__list .item:nth-child(3n + 1) .product__block {
+    background-color: var(--second-brand-color);
   }
 }
