--- a/css/utils.css
+++ b/css/utils.css
@@ -182,16 +182,14 @@ body.error-active .error__overlay {
   position: relative;
   text-decoration: none;
   width: fit-content;
-  padding: 1.6rem 3rem;
+  padding: 1.2rem 3rem;
   letter-spacing: 0.1rem;
   display: block;
   text-transform: uppercase;
   font-family: var(--main-title-font);
-  border: 0.2rem solid var(--second-brand-color);
-  background-color: var(--second-brand-color);
-  color: var(--sub-text-color);
+  border: 0.2rem solid var(--main-text-color);
+  background-color: transparent;
   transition: all 0.3s ease-in-out;
-  border-radius: 1rem;
 }
 
 .bold {
