--- a/css/vars.css
+++ b/css/vars.css
@@ -8,14 +8,13 @@
   --link-color: blue;
   --accent-color: #ff0000;
 
+  --first-brand-color: #ebebeb;
+  --second-brand-color: #f4ec48;
+  --third-brand-color: #d7d7d7;
 
-  --first-brand-color: #f5f5f5;
-  --second-brand-color: #f4bb27;
-  --third-brand-color: #e9e9e9;
-
-  --main-font: 'Poppins';
-  --title-font: 'Poppins Bold';
-  --main-title-font: 'Poppins Black';
+  --main-font: 'Open Sans';
+  --title-font: 'Open Sans SemiBold';
+  --main-title-font: 'Noto Serif Vithkuqi';
 
   font-size: 62.5%;
 }
