--- a/css/hero.css
+++ b/css/hero.css
@@ -139,6 +139,15 @@
     flex-direction: column;
     justify-content: flex-end;
   }
+  .policy-box {
+    grid-column: 1/3;
+    grid-row: 2/3;
+    justify-content: space-between;
+  }
+  .policy-box .text {
+    margin: 0 0 1rem;
+    max-width: 100%;
+  }
   .policy-box .btn {
     margin-left: 0;
   }
